--- a/appiBuick/ibuick.css
+++ b/appiBuick/ibuick.css
@@ -152,7 +152,7 @@ body {
 }
 
 .bodyarea {
-	background-image:url('assests/images/background.png');
+	background-image:url('assests/images/background.jpg');
 	background-size: 100% 100%;
 	height:372px; 
 	position:relative;
